<resources>
    <string name="app_name">Nchikumbe App</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Michael Jambo</string>
    <string name="nav_header_subtitle">jambom950@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="add_product">Add_Product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_products">My_Products</string>
    <string name="about_us">About_us</string>
    <string name="contact_us">Contact_us</string>
    <string name="view">View_Loan_Companies</string>
    <string name="logout">logout</string>
</resources>