<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/add_product" />
        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/ic_baseline_bookmark_24"
            android:title="@string/my_products" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="Contact_us" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_baseline_preview_24"
            android:title="View_loan_companies" />
    </group>
</menu>